# playwright_UI_

./: .gitignore  README.md  check_duplicates.py  conftest.py  constants.py  create_structure.py  pyproject.toml  pytest.ini  requirements.txt  run_excel.py  test_runner.py
adapters/: command_adapter.py
config/: commands.json  config.py  constants.py  cookie.json  env_config.yaml  error_deduplication.yaml  performance_config.yaml  performance_optimization.yaml  storage_state.json  test_config.yaml  新零售B端.xlsx
docs/: README.md  error_deduplication_guide.md  marker_keyword_guide.md  migration_guide.md  performance_optimization_guide.md  plugin_migration_guide.md  refactor_summary.md  service_container_optimization.md  分层架构与插件系统职责划分优化计划.md  命令注册机制改进说明.md  插件使用教程.md  插件改造计划.md  插件系统修复计划.md  插件系统开发指南.md  架构优化最终建议.md  项目结构优化建议.md
docs/architecture/: README.md
docs/best_practices/: README.md
examples/: command_usage_examples.py  custom_command_plugin.py  error_deduplication_example.py
page_objects/: base_page.py
plugins/: example_plugin.json  example_plugin.py  refactor_guide.md
project_documentation/: README.md  architecture_evolution.md  code_cleanup_summary.md
src/: assertion_manager.py  case_utils.py  load_data.py  performance_monitor.py  runner.py  test_case_executor.py  test_step_executor.py  utils.py
test_data/: variables.json
tests/: performance_test.py
utils/: allure_logger.py  browser_pool.py  config.py  dingtalk_notifier.py  excel_handler.py  logger.py  performance_manager.py  report_handler.py  variable_manager.py  yaml_handler.py
(+240 files in other folders)
