[project]
name = "playwright-ui"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "playwright",
    "pytest",
    "allure-python-commons",
    "pyyaml",
    "rich",
    "allure-pytest",
    "loguru",
    "pandas",
    "openpyxl",
    "typer",
    "pydantic",
    "pydantic-settings",
    "requests",
    "pytest-reportlog",
    "ruamel-yaml",
    "configobj",
    "pytest-base-url",
    "pytest-dependency",
    "poetry-core",
    "faker",
    "pytest-playwright",
    "pytest-check",
    "httpx",
    "psutil",
    "pytest-rerunfailures>=15.0",
]
